Add delete user links to users#index and move actions into dropdown

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -846,9 +846,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 }
 
 /*========== Admin users index ==========*/
-.table-users td{
-/*  vertical-align:middle;
-*/}
+.table-users td .icon-large{
+  line-height:0.5em;
+}
 
 /*========== Comments ==========*/
 
