Small copy tweaks

--- a/app/views/registrations/steps/_validate.html.haml
+++ b/app/views/registrations/steps/_validate.html.haml
@@ -27,7 +27,7 @@
         %i.icon-credit-card
         %h3 Instantly by credit card
         %p
-          By entering your credit card details we can check who you are without taking any money from you. We promise never to charge your card and not to keep your details afterwards.
+          By entering your credit card details we can check who you are without taking any money from you. We promise not to charge your card and not to keep your details afterwards.
       =render("card_details", :form => form)
 
     %li.thumbnail
@@ -35,7 +35,7 @@
         %i.icon-envelope
         %h3 Slowly by post 
         %p
-          If you don't want to use a credit card, then we can send you letter with a unique passcode that you enter to prove that you live at the address.
+          If you don't want to use a credit card, then we can send you a letter with a unique passcode that you enter to prove that you live at the address.
           
     %li.thumbnail
       =link_to "#", :class => "validate-by-link", :data => {:"validate-by" => "organisation"} do
