Remove beta title and route from feedback form

--- a/app/views/enquiries/index.html.haml
+++ b/app/views/enquiries/index.html.haml
@@ -1,8 +1,6 @@
 %h1.mb-2
   -if params[:form_name] == "feedback"
-    =title("Beta feedback")
-  -elsif params[:form_name] == "promoter"
-    =title("Promoter applications to join")
+    =title("Feedback")
   -else
     =title("Enquiries")
     
