--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,14 +10,15 @@
         ="Hi #{current_user}, welcome to Neighbours Can Help"
       -else
         Welcome to Neighbours Can Help
-    %h3.home-where.home-intro-text ...where neighbours help each other
-  %i#circle1.icon-user.intro-circle-icon.circle1.fade_in.fade_one
-  %i#circle2.icon-user.intro-circle-icon.circle1.fade_in.fade_two
-  %i#circle3.icon-user.intro-circle-icon.circle2.fade_in.fade_three
-  %i#circle4.icon-user.intro-circle-icon.circle3.fade_in.fade_four  
-  %i#circle5.icon-user.intro-circle-icon.circle4.fade_in.fade_five     
-  %i#circle6.icon-user.intro-circle-icon.circle4.fade_in.fade_six 
-  %i#circle7.icon-user.intro-circle-icon.circle4.fade_in.fade_six 
+    %h3.home-where.home-intro-text ..where neighbours are helping each other
+  .intro-circles  
+    %i#circle1.icon-user.intro-circle-icon.circle1.fade_in.fade_one
+    %i#circle2.icon-user.intro-circle-icon.circle1.fade_in.fade_two
+    %i#circle3.icon-user.intro-circle-icon.circle2.fade_in.fade_three
+    %i#circle4.icon-user.intro-circle-icon.circle3.fade_in.fade_four  
+    %i#circle5.icon-user.intro-circle-icon.circle4.fade_in.fade_five     
+    %i#circle6.icon-user.intro-circle-icon.circle4.fade_in.fade_six 
+    %i#circle7.icon-user.intro-circle-icon.circle4.fade_in.fade_six 
 .what-help
   %h2.what-help-text What help would you like?
   =select_tag(:need_category, options_for_select([["Please select...", nil]] + NeedCategory.select_options.map{|nc| [nc.to_s,nc.id]}), :id => "what-help-select")
