--- a/app/views/registrations/steps/_who_you_are.html.haml
+++ b/app/views/registrations/steps/_who_you_are.html.haml
@@ -7,7 +7,7 @@
   .control-group{:class => @user.errors[:dob].present? ? 'error' : ''}
     %label.control-label Date of Birth
     .controls
-      =form.date_select :dob, {:order => [:day, :month, :year], :prompt => true, :start_year => (Time.now.year - 100), :end_year => (Time.now.year - 18)}, :class => "input-medium"
+      =form.date_select :dob, {:order => [:day, :month, :year], :prompt => true, :start_year => (Time.now.year - 100), :end_year => (Time.now.year)}, :class => "input-medium"
       %span.help-inline=@user.errors[:dob].try(:first)
   =form.input :email, :label => "Email address", :required => false, :input_html => {:placeholder => "e.g. john@email.com"}
   =form.input :email_confirmation, :label => "Confirm email address", :required => false, :input_html => {:placeholder => "e.g. john@email.com"}
