--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -1,9 +1,8 @@
--if logged_out?
-  -content_for(:head) do
-    :javascript
-      $(document).ready(function() {
-        NewNeedForm.init();
-      });
+-content_for(:head) do
+  :javascript
+    $(document).ready(function() {
+      NewNeedForm.init(#{logged_out?});
+    });
 
 .well
   =semantic_form_for @need, :validate => true, :html => { :class => "form-horizontal" }  do |f|
@@ -11,10 +10,8 @@
     =f.inputs do
       =f.input :category, :label => "I need help with", :prompt => "Please select...", :required => false, :collection => NeedCategory.select_options
       =f.input :description, :label => "Add a description",  :input_html => { :class => "span5", :rows => "6" }, :required => false
-      .control-group{:class => "#{@need.errors[:deadline].present? ? 'error' : ''}"}
-        %label.control-label
-          I need to know by
-          %em.optional (optional)
+      =f.input :need_to_know_by, :as => :radio, :collection => [["Any time","anytime"],["As soon as possible","asap"], ["A specific date", "date"]], :label => "I need to know by"
+      #need_deadline_input.control-group{:class => "#{@need.errors[:deadline].present? ? 'error' : ''}"}
         .controls
           =f.date_select :deadline, {:order => [:day, :month, :year], :prompt => true, :start_year => (Time.now.year), :end_year => (Time.now.year + 1)}, :class => "input-small"
           -if @need.errors[:deadline].present?
