--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -12,72 +12,41 @@
   .span6
     %h2 Neighbours who've been helped
     %ul.help-list.unstyled
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Borrow a ladder", "/wireframes/blog"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.   
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Tyre pressures", "/wireframes/blog"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.   
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Visiting my father", "/wireframes/blog"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.   
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Taking cat to the vet", "/wireframes/blog"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.               
-    =link_to "I'd like some help", new_need_path, :class=>"btn call-to-action primary"
-                            
-  .span6
-    %h2 Neighbours who need help
-    %ul.help-list.unstyled
-      -@needs.each do |need|
+      -@helped.each do |need|
         %li.list
           .list-image
-            =link_to (current_user ? need : "#register-popup"), :'data-toggle' => "#{current_user ? '' : 'modal'}" do
+            =link_to need do
               =image_for(need.user, "60x50#")
               %p.small-text
                 =need.user
           .list-text
             %h3
-              -if current_user
-                =link_to need.title, need
-              -else
-                =link_to need.title, "#register-popup", :"data-toggle"=>"modal"
+              =link_to need.title, need
             %p
-              =need.description
+              -if current_user.validated?
+                =need.description
+              -else
+                =need.category.description
 
-    -if current_user
-      =link_to "I'd like to offer some help", needs_path, :class=>"btn call-to-action"    
-    -else
-      =link_to "I'd like to offer some help", "#register-popup", :"data-toggle"=>"modal", :class=>"btn call-to-action"         
+    =link_to "I'd like some help", new_need_path, :class=>"btn call-to-action primary"
+                            
+  .span6
+    %h2 Neighbours who need help
+    %ul.help-list.unstyled
+      -@need_help.each do |need|
+        %li.list
+          .list-image
+            =link_to need do
+              =image_for(need.user, "60x50#")
+              %p.small-text
+                =need.user
+          .list-text
+            %h3
+              =link_to need.title, need
+            %p
+              -if current_user.validated?
+                =need.description
+              -else
+                =need.category.description
+
+    =link_to "I'd like to offer some help", needs_path, :class=>"btn call-to-action"    
