Added 'View profile' link in logged-in header links

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,7 +21,13 @@
                   =link_to(admin_path) do
                     %icon.icon-cogs
                     Admin
-                %li.divider
+              -else
+                %li
+                  =link_to(current_user) do
+                    %icon.icon-user
+                    View profile  
+              %li.divider
+                
               %li
                 =link_to(edit_user_path(current_user)) do
                   %icon.icon-cog
