--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -1,7 +1,7 @@
 -content_for(:head) do
   :javascript
     $(document).ready(function() {
-      NewNeedForm.init(#{logged_out?});
+      NewNeedForm.init(#{logged_out? ? 0 : 1});
     });
 
 .well
