--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -11,6 +11,7 @@
         Users
       %ul.unstyled
         %li=link_to "Manage users", users_path
+        %li=link_to "Users map", map_users_path
     .well
       %h2
         %i.icon-tags
