--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -8,8 +8,8 @@
     =hidden_field_tag :return_to
     =f.inputs do
       =f.input :category, :label => "I need help with", :help => "Select the most relevant category", :prompt => "Please select...", :required => false, :collection => NeedCategory.select_options, :input_html => {:class => "span5"}
-      =f.input :description, :label => "Add a description", :help => "Describe what you need help with", :input_html => { :class => "span5", :rows => "6" }, :required => false
-      =f.input :need_to_know_by, :as => :radio, :collection => [["Any time","anytime"],["As soon as possible","asap"], ["A specific date", "date"]], :label => "I need to know by", :help => "Is this urgent or do you need to know by a specific date?"
+      =f.input :description, :label => "Add a description", :help => "Describe what you need help with. Be sure to include when you need the help and how flexible you can be.", :input_html => { :class => "span5", :rows => "6" }, :required => false
+      =f.input :need_to_know_by, :as => :radio, :collection => [["Any time","anytime"],["As soon as possible","asap"], ["A specific date", "date"]], :label => "I need to know by", :help => "When would you like to know if anybody can help you?"
       #need_deadline_input.control-group{:class => "#{@need.errors[:deadline].present? ? 'error' : ''}"}
         .controls
           =f.date_select :deadline, {:order => [:day, :month, :year], :prompt => true, :start_year => (Time.now.year), :end_year => (Time.now.year + 1)}, :class => "input-small"
