--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -14,7 +14,7 @@
           ="#{@need.user} has accepted someone else's offer."
 .row
   .span2
-    =link_to @need.user, :class => "user-thumbnail-large" do
+    =link_to @need.user, :rel => 'tooltip', :title => @need.user.street_name, :class => "user-thumbnail-large pull-left" do
       =image_for(@need.user, "120x120#")
       %p=@need.user
   .span8
@@ -61,7 +61,7 @@
           -@offers.each do |offer|
             %li.span1
               .list-image.thumbnail
-                =link_to offer.user do
+                =link_to offer.user, :rel => 'tooltip', :title => offer.user.street_name, :class => "pull-left" do
                   =image_for(offer.user, "60x60#")
                   %p.small-text
                     =offer.user
