--- a/app/views/offers/index.html.haml
+++ b/app/views/offers/index.html.haml
@@ -10,7 +10,7 @@
         -@offers.order("created_at DESC").each do |offer|
           %li
             =link_to offer.need do
-              .list-image
+              .list-image{:'data-tooltip' => 'tooltip', :title => offer.user.street_name}
                 =image_for(offer.user, "60x50#")
                 %p.small-text=offer.user
               %h3=offer.need.title
