--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -12,15 +12,25 @@
       %ul.unstyled
         %li=link_to "Manage users", users_path
         %li=link_to "Users map", map_users_path
+  .span4        
     .well
       %h2
         %i.icon-tags
         Categories
       %ul.unstyled
         %li=link_to "Manage need categories", need_categories_path
+  .span4        
     .well
       %h2
         %i.icon-dashboard
         Analytics
       %ul.unstyled
-        %li=link_to "View search queries", searches_path    
+        %li=link_to "View search queries", searches_path
+.row
+  .span4
+    .well
+      %h2
+        %i.icon-warning-sign
+        Inappropriate content
+      %ul.unstyled
+        %li=link_to "View inappropriate content", flags_path
