--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -52,7 +52,10 @@
             =li_with_active(@page && @page.slug == "about", link_to_slug(:about, :class=>"nav-link"))
             =li_with_active(@page && @page.slug == "stories", link_to_slug(:stories, :class=>"nav-link"))
             -if current_user
-              =li_with_active(controller_name.neighbourhoods?, link_to("My Neighbourhood", neighbourhood_path, :class=>"nav-link"))
+              -if current_user.is_in_maltby?
+                =li_with_active(controller_name.neighbourhoods?, link_to("My Neighbourhood", neighbourhood_path, :class=>"nav-link"))
+              -else
+                =li_with_active(current_page?(feedback_path), link_to("My Neighbourhood", other_neighbourhood_path, :class => "nav-link"))            
             -else
               =li_with_active(controller_name.neighbourhoods?, link_to("My Neighbourhood", "#register-popup", :class=>"home-help-link", :'data-toggle' => 'modal'))
             =li_with_active(current_page?(feedback_path), link_to("Contact Us", feedback_path, :class => "nav-link"))
