Change link text in feedback form email

--- a/app/views/enquiry_mailer/feedback.html.haml
+++ b/app/views/enquiry_mailer/feedback.html.haml
@@ -5,7 +5,7 @@
     %p There has been new feedback added on the site.
       
     %p
-      =link_to("See all feedback at ", enquiries_url)
+      =link_to("See all feedback", enquiries_url)
     %p
       Thanks,
     %p
