Add resolve links to flags

--- a/app/views/flags/index.html.haml
+++ b/app/views/flags/index.html.haml
@@ -8,7 +8,8 @@
       %th.span4 Request
       %th.span4 Report message
       %th.span2 Reported by
-      %th.span2 Time
+      %th Time
+      %th
   %tbody
     -@flags.each do |flag|
       %tr
@@ -18,8 +19,9 @@
               =image_for(flag.resource.user, "60x50#")
             %p.small-text=flag.resource.user
           =link_to_self(flag.resource)
-          %p=truncate(strip_tags(flag.resource.description*100), :length => 100)
+          %p=truncate(strip_tags(flag.resource.description), :length => 100)
         %td.span4=flag.text
         %td.span2=link_to(flag.user.full_name, flag.user)
-        %td.span2=flag.created_at.to_s(:date_and_time)
+        %td=flag.created_at.to_s(:date_and_time)
+        %td=link_to("x", resolve_flag_path(flag), :method => :put)
         
