Champions profile page with public and private messaging

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -983,3 +983,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 	}*/
 
 }
+
+/*************** community champion  ********************/
+.post-private-checkbox .controls .checkbox {
+  font-size: 12px;
+  line-height: 14px;
+  margin-right: 10px;
+}
