--- a/app/views/needs/index.html.haml
+++ b/app/views/needs/index.html.haml
@@ -24,6 +24,11 @@
             %h3
               =link_to_self(need)
             =simple_format(need.description)
-          =link_to "I can help", need, :class=>"btn i-can-help-btn"
+          -if current_user.validated?
+            =link_to "I can help", need, :class=>"btn i-can-help-btn"
+          -else
+            =link_to "I can help", "#not-validated", :class=>"btn i-can-help-btn", :'data-toggle' => "modal"
     .clearfix
-    
+
+
+=render "modals/not_validated"
