--- a/app/views/needs/user_index.html.haml
+++ b/app/views/needs/user_index.html.haml
@@ -11,7 +11,7 @@
           %li
             =link_to need do
               .list-image
-                =image_for(need.user, "60x50#")
+                =image_for_with_validation(need.user, "60x50#")
                 %p.small-text=need.user
               %h3=need.title
               %p
