--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,5 +1,5 @@
 .comment-form
-  =link_to(image_for(current_user, "30x30#"), current_user, :class => "comment-image")
+  =link_to(image_for_with_validation(current_user, "30x30#"), current_user, :class => "comment-image")
   =semantic_form_for(comment, :remote => true, :html => {:class => "loader-long"}) do |form|
     =form.hidden_field :post_id
     =form.inputs do
