--- a/app/views/needs/index.html.haml
+++ b/app/views/needs/index.html.haml
@@ -18,7 +18,7 @@
         %li.list.list-result
           .list-image
             =link_to need, :rel => 'tooltip', :title => (need.user.street_name if current_user.try(:validated?)), :class => "pull-left" do
-              =image_for(need.user, "60x50#")
+              =image_for_with_validation(need.user, "60x50#")
               %p.small-text=need.user
           .list-text
             %h3
