--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -15,7 +15,7 @@
 .row
   .span2
     =link_to @need.user, :rel => 'tooltip', :title => (@need.user.street_name if current_user.try(:validated?)), :class => "user-thumbnail-large pull-left" do
-      =image_for(@need.user, "120x120#")
+      =image_for_with_validation(@need.user, "120x120#")
       %p=@need.user
   .span8
     .request-body.mb2
@@ -65,7 +65,7 @@
             %li.span1
               .list-image.thumbnail
                 =link_to offer.user, :rel => 'tooltip', :title => (offer.user.street_name if current_user.try(:validated?)), :class => "pull-left" do
-                  =image_for(offer.user, "60x60#")
+                  =image_for_with_validation(offer.user, "60x60#")
                   %p.small-text
                     =offer.user
 .row
