--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -21,7 +21,7 @@
         %li.list
           .list-image
             =link_to need, :rel => 'tooltip', :title => (need.user.street_name if current_user.try(:validated?)), :class => "pull-left" do
-              =image_for(need.user, "60x50#")
+              =image_for_with_validation(need.user, "60x50#")
               %p.small-text
                 =need.user
           .list-text
@@ -42,7 +42,7 @@
         %li.list
           .list-image
             =link_to need, :rel => 'tooltip', :title => (need.user.street_name if current_user.try(:validated?)), :class => "pull-left" do
-              =image_for(need.user, "60x50#")
+              =image_for_with_validation(need.user, "60x50#")
               %p.small-text
                 =need.user
           .list-text
