--- a/app/views/offers/index.html.haml
+++ b/app/views/offers/index.html.haml
@@ -11,7 +11,7 @@
           %li
             =link_to offer.need do
               .list-image{:'data-tooltip' => 'tooltip', :title => (offer.need.user.street_name if current_user.try(:validated?))}
-                =image_for(offer.need.user, "60x50#")
+                =image_for_with_validation(offer.need.user, "60x50#")
                 %p.small-text=offer.need.user
               %h3=offer.need.title
               %p
